# PETTERI

./: .pre-commit-config.yaml  README.md  pyproject.toml
brain/: .eslintrc.yml  README.md  bun.lockb  package.json  tsconfig.json
brain/src/: handler.ts  index.ts
brain/src/api/: ping.ts
brain/src/api/v0/command/: weather.ts
brain/src/integrations/met.no/: index.ts
brain/src/routeUtils/: index.ts  resolveRoutes.ts
petteri/speech/: inference.py  record.py
petteri/wakeword/: test.py
wakeword/: pyproject.toml  stream.py  test.py
