[tool.poetry]
name = "PETTERI"
version = "0.1.0"
description = ""
authors = ["Joona Gynther <joona@gynther.xyz>"]

[tool.poetry.dependencies]
python = "^3.10"
PyAudio = "^0.2.12"
transformers = "^4.21.1"
torch = "^1.12.1"
torchaudio = "^0.12.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
